--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -13,6 +13,24 @@ small, sup, sub { font-size: $fs-small; }
 a:link, a:visited, a:focus { color: $link-color; text-decoration: none;}
 // a:hover { color: $link-color; text-decoration: underline;}
 
+
+//color, date, datetime, datetime-local, email, month, number, range, search, tel, time, url, week,
+// input[type="button"], input[type="checkbox"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="file"], input[type="hidden"], input[type="image"], input[type="month"], input[type="number"], input[type="password"], input[type="radio"], input[type="range"], input[type="reset"], input[type="search"], input[type="submit"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"]
+input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="file"], input[type="image"], input[type="month"], input[type="number"], input[type="password"], input[type="range"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"], textarea, select {
+  border: $menu-border;
+  padding: round($fs-normal / 5);
+  @include border-radius($default-border-radius);
+  background: #F8F8F8;
+  @include box-shadow(0 2px round($fs-normal/2) rgba(black, 0.1) inset);
+  &:focus {
+    background: #FFF;
+    border-color: $base-color;
+    @include box-shadow(0 0 round($fs-normal*0.6) rgba($base-color, 0.6));
+  }
+}
+
+// , input[type="radio"], input[type="hidden"], input[type="button"], input[type="checkbox"], input[type="reset"], input[type="search"], input[type="submit"]
+
 #top {
   margin-bottom: 0;
   @include background-active-gradient;
@@ -25,16 +43,16 @@ html.backend {
     background: transparent;
     height: 100%;
     #wrap {
-      @include outerRow();
-      width: 100% !important;
+      @include grid-row();
+      max-width: 100%;
       height: 100%;
-      #side {
-        @include column(2);
+      & > #side {
+        @include grid-column(2, $float: left);
         height: 100%;
         padding: 0;
       }
-      #main {
-        @include column(10);
+      & > #main {
+        @include grid-column(10, $float: left);
         height: 100%;
         #header {
           margin-bottom: $default-gap;
@@ -70,7 +88,7 @@ html.authentication {
           padding: 20px;
           margin: 60px auto;
           width: 40%;
-          @include respondTo(smallScreen) {
+          @include respond-to(small) {
             margin: auto;
             width: 100%;
           }
@@ -126,7 +144,7 @@ html.authentication {
   }
   width: 40%;
   margin: 0 auto;
-  @include respondTo(smallScreen) {
+  @include respond-to(small) {
     width: 100%;
   }
 }
@@ -256,17 +274,16 @@ ul.side-menu {
 .attributes-list {
   @include column-count(3);
   @include column-gap(2em);
-  @include respondTo(smallScreen) {
+  @include respond-to(small) {
     @include column-count(1);
   }
-  @include respondTo(mediumScreen) {
+  @include respond-to(medium) {
     @include column-count(2);
     @include column-gap(1.5em);
   }
-/*  @include respondTo(largeScreen) {
-    @include column-count(4);
-  }
-*/
+//  @include respond-to(large) {
+//    @include column-count(4);
+//  }
   $label-width: 40%;
   margin-bottom: 1em;
   dl {
@@ -792,6 +809,10 @@ span.rad, label.radio {
       border: 1px solid mix($base-color, #FFF, 15%);
       padding: 0;
       @include text-align(center);
+      &.ui-datepicker-current-day {
+        font-weight: bold;
+        background: rgba($base-color, 0.2);
+      }
       &:hover {
         border: 1px solid #FFF;
         background: $base-color;
@@ -893,12 +914,12 @@ input[data-date], input[data-datepicker] {
     @include float(right);
     position: absolute;
     @include right(0);
-    @include is-icon;
-    @include use-icon(remove);
     @include display(block);
-    width: 16px;
-    height: 16px;
-    @include hide-text();
+    font-size: 0;
+    i {
+      @include is-icon;
+      @include use-icon(remove);
+    }
   }
 }
 .links {
