--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -13,6 +13,7 @@ $experimental-support-for-svg: true;
 
 $font-awesome-icons: ((glass "\f000") (music "\f001") (search "\f002") (envelope "\f003") (heart "\f004") (star "\f005") (star-empty "\f006") (user "\f007") (film "\f008") (th-large "\f009") (th "\f00a") (th-list "\f00b") (ok "\f00c") (remove "\f00d") (zoom-in "\f00e") (zoom-out "\f010") (off "\f011") (signal "\f012") (cog "\f013") (trash "\f014") (home "\f015") (file "\f016") (time "\f017") (road "\f018") (download-alt "\f019") (download "\f01a") (upload "\f01b") (inbox "\f01c") (play-circle "\f01d") (repeat "\f01e") (refresh "\f021") (list-alt "\f022") (lock "\f023") (flag "\f024") (headphones "\f025") (volume-off "\f026") (volume-down "\f027") (volume-up "\f028") (qrcode "\f029") (barcode "\f02a") (tag "\f02b") (tags "\f02c") (book "\f02d") (bookmark "\f02e") (print "\f02f") (camera "\f030") (font "\f031") (bold "\f032") (italic "\f033") (text-height "\f034") (text-width "\f035") (align-left "\f036") (align-center "\f037") (align-right "\f038") (align-justify "\f039") (list "\f03a") (indent-left "\f03b") (indent-right "\f03c") (facetime-video "\f03d") (picture "\f03e") (pencil "\f040") (map-marker "\f041") (adjust "\f042") (tint "\f043") (edit "\f044") (share "\f045") (check "\f046") (move "\f047") (step-backward "\f048") (fast-backward "\f049") (backward "\f04a") (play "\f04b") (pause "\f04c") (stop "\f04d") (forward "\f04e") (fast-forward "\f050") (step-forward "\f051") (eject "\f052") (chevron-left "\f053") (chevron-right "\f054") (plus-sign "\f055") (minus-sign "\f056") (remove-sign "\f057") (ok-sign "\f058") (question-sign "\f059") (info-sign "\f05a") (screenshot "\f05b") (remove-circle "\f05c") (ok-circle "\f05d") (ban-circle "\f05e") (arrow-left "\f060") (arrow-right "\f061") (arrow-up "\f062") (arrow-down "\f063") (share-alt "\f064") (resize-full "\f065") (resize-small "\f066") (plus "\f067") (minus "\f068") (asterisk "\f069") (exclamation-sign "\f06a") (gift "\f06b") (leaf "\f06c") (fire "\f06d") (eye-open "\f06e") (eye-close "\f070") (warning-sign "\f071") (plane "\f072") (calendar "\f073") (random "\f074") (comment "\f075") (magnet "\f076") (chevron-up "\f077") (chevron-down "\f078") (retweet "\f079") (shopping-cart "\f07a") (folder-close "\f07b") (folder-open "\f07c") (resize-vertical "\f07d") (resize-horizontal "\f07e") (bar-chart "\f080") (twitter-sign "\f081") (facebook-sign "\f082") (camera-retro "\f083") (key "\f084") (cogs "\f085") (comments "\f086") (thumbs-up "\f087") (thumbs-down "\f088") (star-half "\f089") (heart-empty "\f08a") (signout "\f08b") (linkedin-sign "\f08c") (pushpin "\f08d") (external-link "\f08e") (signin "\f090") (trophy "\f091") (github-sign "\f092") (upload-alt "\f093") (lemon "\f094") (phone "\f095") (check-empty "\f096") (bookmark-empty "\f097") (phone-sign "\f098") (twitter "\f099") (facebook "\f09a") (github "\f09b") (unlock "\f09c") (credit-card "\f09d") (rss "\f09e") (hdd "\f0a0") (bullhorn "\f0a1") (bell "\f0a2") (certificate "\f0a3") (hand-right "\f0a4") (hand-left "\f0a5") (hand-up "\f0a6") (hand-down "\f0a7") (circle-arrow-left "\f0a8") (circle-arrow-right "\f0a9") (circle-arrow-up "\f0aa") (circle-arrow-down "\f0ab") (globe "\f0ac") (wrench "\f0ad") (tasks "\f0ae") (filter "\f0b0") (briefcase "\f0b1") (fullscreen "\f0b2") (group "\f0c0") (link "\f0c1") (cloud "\f0c2") (beaker "\f0c3") (cut "\f0c4") (copy "\f0c5") (paper-clip "\f0c6") (save "\f0c7") (sign-blank "\f0c8") (reorder "\f0c9") (list-ul "\f0ca") (list-ol "\f0cb") (strikethrough "\f0cc") (underline "\f0cd") (table "\f0ce") (magic "\f0d0") (truck "\f0d1") (pinterest "\f0d2") (pinterest-sign "\f0d3") (google-plus-sign "\f0d4") (google-plus "\f0d5") (money "\f0d6") (caret-down "\f0d7") (caret-up "\f0d8") (caret-left "\f0d9") (caret-right "\f0da") (columns "\f0db") (sort "\f0dc") (sort-down "\f0dd") (sort-up "\f0de") (envelope-alt "\f0e0") (linkedin "\f0e1") (undo "\f0e2") (legal "\f0e3") (dashboard "\f0e4") (comment-alt "\f0e5") (comments-alt "\f0e6") (bolt "\f0e7") (sitemap "\f0e8") (umbrella "\f0e9") (paste "\f0ea") (lightbulb "\f0eb") (exchange "\f0ec") (cloud-download "\f0ed") (cloud-upload "\f0ee") (user-md "\f0f0") (stethoscope "\f0f1") (suitcase "\f0f2") (bell-alt "\f0f3") (coffee "\f0f4") (food "\f0f5") (file-alt "\f0f6") (building "\f0f7") (hospital "\f0f8") (ambulance "\f0f9") (medkit "\f0fa") (fighter-jet "\f0fb") (beer "\f0fc") (h-sign "\f0fd") (plus-sign-alt "\f0fe") (double-angle-left "\f100") (double-angle-right "\f101") (double-angle-up "\f102") (double-angle-down "\f103") (angle-left "\f104") (angle-right "\f105") (angle-up "\f106") (angle-down "\f107") (desktop "\f108") (laptop "\f109") (tablet "\f10a") (mobile-phone "\f10b") (circle-blank "\f10c") (quote-left "\f10d") (quote-right "\f10e") (spinner "\f110") (circle "\f111") (reply "\f112") (github-alt "\f113") (folder-close-alt "\f114") (folder-open-alt "\f115"));
 $font-awesome-path: fonts;
+$symbiols: $font-awesome-icons;
 
 @font-face {
   font-family: 'FontAwesome';
@@ -25,7 +26,114 @@ $font-awesome-path: fonts;
 }
 
 
-$symbiols: $font-awesome-icons;
+/* 37E */
+/*##############|                   |                   |                   |                   |                   |                   |*/
+$modules-names:  relationship        accountancy         sales               purchases           stocks              production         ;
+$modules-colors: #07D                #380                #BB4                #c60                #B00                #741               ;
+$modules: ();
+@for $i from 1 through length($modules-names) {
+  $modules: append($modules, (nth($modules-names, $i) nth($modules-colors, $i)));
+}
+
+$fs-ratio: 1.4; // 1.618;
+$fs-normal: 14px;
+$fs-small:      ceil($fs-normal/$fs-ratio);
+$fs-large:     round($fs-ratio*$fs-normal);
+$fs-huge:      round($fs-ratio*$fs-large);
+$fs-very-huge: round($fs-ratio*$fs-huge);
+
+$neutral-color: #777;
+$base-color: #688ED8; //#2BA6CB; // #7A1; //#2BA6CB (ZURB) // #16D (Google)
+$active-color: $base-color; // #DE7308; // mix(green, $base-color, 50%);
+$link-color:  darken($base-color, 27%);
+$link-color:  darken($base-color, 10%);
+$text-color:  #111;
+$base-font-color:  #222;
+$base-font-reversed-color:  #FFF;
+$title-color: darken($base-color, 40%);
+$important-color: #D88E68;
+$invalid-color: red;
+$hover-transparency: 0.85;
+$hover-mask: transparentize($base-color, $hover-transparency);
+
+@function background-hover($background-color) {
+  @return mix($background-color, opacify($hover-mask, 1), percentage($hover-transparency));
+}
+
+//$base-color: #95b0e4;
+//$link-color: $base-color; /* #3162C0; /* 02C */
+$desktop-background: #FFFFFF;
+$neutral-background: change-color($neutral-color, $lightness: 90%);
+$input-background: $desktop-background;
+$light-color: mix($base-color, $desktop-background, 50%); /* #C9D7F1 */
+$menu-background: #F0F0F0; /* #3D5C8D F1F1F1 86a5e0 c8d3e9*/
+$menu-background-hover: background-hover($menu-background);
+$menu-border-color: mix($menu-background, #000000, 87%);
+$menu-border-width: floor($fs-normal / 10);
+$menu-border: $menu-border-width solid $menu-border-color;
+$menu-width: $fs-normal * 13;
+$menu-padding: 2*$menu-border-width;
+$menu-height:      2 * ceil($fs-normal * 0.875);
+$menu-text-height: 2 * ceil($fs-normal * 0.655);
+$input-border: $menu-border-width solid mix($desktop-background, $neutral-color, 60%);
+$label-width: 25%;
+
+$default-border-radius: round($fs-normal/5);
+/* Variation from center to  */
+$default-lightness-variation: 5%;
+$default-gap: round($fs-normal * 0.55);
+$cell-background: mix($desktop-background, $base-color, 82%);
+$cell-background-current: mix($desktop-background, $base-color, 62%);
+
+
+$buttons-names: (new create) (edit update) (destroy abort) (search) (confirm validate) (cancel) (lock) (unlock) (action reflect default) (up) (down) (left) (right) (configure) (column) (table) (duplicate) (point) (mark) (unmark) (true) (false) (page) (spreadsheet) (print) (filter) (mail) (nomail) (sort) (check) (divide) (load) (logout) (increment) (decrement) (close) (help) (merge) (spread) (rgreen) (rblue) (rblack) (nav) (general-informations) (genealogy) (group) (care) (treatment) (drug) (entity) (delay) (stock) (asset) (animal) (vegetable) (document) (movement);
+$buttons-states: hover whited active disabled normal;
+$buttons-radius: $default-border-radius;
+$buttons-formats: ("themes/tekyla/icons-16.png" 24px "&" $buttons-radius) ("themes/tekyla/icons-12.png" 18px "&.mini" 2px) ("themes/tekyla/icons-24.png" 36px "&.large" 4px);
+
+$passive-bg: $menu-background;
+$active-bg: $base-color;
+
+/*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic);*/
+$sans-font-family: 'Open Sans', Helvetica, 'Liberation Sans', sans-serif;
+$base-font-family: $sans-font-family;
+
+$header-font-family: $base-font-family;
+$body-font-family: $base-font-family;
+$body-font-size: $fs-normal;
+$em-base: $fs-normal;
+$primary-color: $base-color;
+
+$topbar-height: 32px;
+$topbar-bg: $active-color;
+$topbar-dropdown-bg: $topbar-bg;
+
+$global-radius: $default-border-radius;
+$include-html-classes: false;
+
+
+
+@function visible-color($background-color) {
+  @if lightness($background-color) > 70% {
+    @return $base-font-color;
+  }
+  @else {
+    @return $base-font-reversed-color;
+  }
+}
+
+@function shadow-color-of($color) {
+  @if lightness($color) > 50% {
+    @return rgba(#222, 0.6);
+  }
+  @else {
+    @return rgba(#FFF, 0.8);
+  }
+}
+
+
+
+
 
 @mixin is-icon($size: 16px) {
   font-family: FontAwesome;
@@ -127,62 +235,6 @@ $symbiols: $font-awesome-icons;
   }
 }
 
-/* 37E */
-/*##############|                   |                   |                   |                   |                   |                   |*/
-$modules-names:  relationship        accountancy         sales               purchases           stocks              production         ;
-$modules-colors: #07D                #380                #BB4                #c60                #B00                #741               ;
-$modules: ();
-@for $i from 1 through length($modules-names) {
-  $modules: append($modules, (nth($modules-names, $i) nth($modules-colors, $i)));
-}
-
-$fs-ratio: 1.4; // 1.618;
-$fs-normal: 14px;
-$fs-small:      ceil($fs-normal/$fs-ratio);
-$fs-large:     round($fs-ratio*$fs-normal);
-$fs-huge:      round($fs-ratio*$fs-large);
-$fs-very-huge: round($fs-ratio*$fs-huge);
-
-$neutral-color: #777;
-$base-color: #688ED8; //#2BA6CB; // #7A1; //#2BA6CB (ZURB) // #16D (Google)
-$active-color: $base-color; // #DE7308; // mix(green, $base-color, 50%);
-$link-color:  darken($base-color, 27%);
-$link-color:  darken($base-color, 10%);
-$text-color:  #111;
-$title-color: darken($base-color, 40%);
-$invalid-color: red;
-$hover-transparency: 0.85;
-$hover-mask: transparentize($base-color, $hover-transparency);
-
-@function background-hover($background-color) {
-/*  @return mix($background-color, $base-color, 78%);*/
-  @return mix($background-color, opacify($hover-mask, 1), percentage($hover-transparency));
-}
-
-//$base-color: #95b0e4;
-//$link-color: $base-color; /* #3162C0; /* 02C */
-$desktop-background: #FFFFFF;
-$neutral-background: change-color($neutral-color, $lightness: 90%);
-$input-background: $desktop-background;
-$light-color: mix($base-color, $desktop-background, 50%); /* #C9D7F1 */
-$menu-background: #F0F0F0; /* #3D5C8D F1F1F1 86a5e0 c8d3e9*/
-$menu-background-hover: background-hover($menu-background);
-$menu-border-color: mix($menu-background, #000000, 87%);
-$menu-border-width: floor($fs-normal / 10);
-$menu-border: $menu-border-width solid $menu-border-color;
-$menu-width: $fs-normal * 13;
-$menu-padding: 2*$menu-border-width;
-$menu-height:      2 * ceil($fs-normal * 0.875);
-$menu-text-height: 2 * ceil($fs-normal * 0.655);
-$input-border: $menu-border-width solid mix($desktop-background, $neutral-color, 60%);
-$label-width: 25%;
-
-$default-border-radius: round($fs-normal/5);
-/* Variation from center to  */
-$default-lightness-variation: 5%;
-$default-gap: round($fs-normal * 0.55);
-$cell-background: mix($desktop-background, $base-color, 82%);
-$cell-background-current: mix($desktop-background, $base-color, 62%);
 
 @mixin background-active-gradient {
   @include background(linear-gradient(top, lighten($active-color, $default-lightness-variation), $active-color, darken($active-color, $default-lightness-variation)));
@@ -315,7 +367,7 @@ $cell-background-current: mix($desktop-background, $base-color, 62%);
       border: none;
       margin-top: 0;
       a {
-        background-color: $mainColor;
+        background-color: $primary-color;
         border: none;
         &, & * { color: white; font-weight: bold; @include text-shadow(1px 1px 0 $neutral-color)}
         i { font-weight: normal; }
@@ -324,126 +376,6 @@ $cell-background-current: mix($desktop-background, $base-color, 62%);
   }
 }
 
-
-
-$buttons-names: (new create) (edit update) (destroy abort) (search) (confirm validate) (cancel) (lock) (unlock) (action reflect default) (up) (down) (left) (right) (configure) (column) (table) (duplicate) (point) (mark) (unmark) (true) (false) (page) (spreadsheet) (print) (filter) (mail) (nomail) (sort) (check) (divide) (load) (logout) (increment) (decrement) (close) (help) (merge) (spread) (rgreen) (rblue) (rblack) (nav) (general-informations) (genealogy) (group) (care) (treatment) (drug) (entity) (delay) (stock) (asset) (animal) (vegetable) (document) (movement);
-$buttons-states: hover whited active disabled normal;
-$buttons-radius: $default-border-radius;
-$buttons-formats: ("themes/tekyla/icons-16.png" 24px "&" $buttons-radius) ("themes/tekyla/icons-12.png" 18px "&.mini" 2px) ("themes/tekyla/icons-24.png" 36px "&.large" 4px);
-
-$passive-bg: $menu-background;
-$active-bg: $base-color;
-
-@mixin button-normal-state($normal) {
-  text-decoration: none;
-  border: $menu-border-width solid darken($normal, 10%);
-  border-width: $menu-border-width;
-  border-style: solid;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  background: $normal;
-  @include background-image(linear-gradient(lighten($normal, $default-lightness-variation), darken($normal, $default-lightness-variation)));
-  @include box-shadow(0 1px 0 rgba(255, 255, 255, 0.2) inset);
-  @include box-shadow(0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05));
-  @include border-radius($buttons-radius);
-}
-
-
-@mixin button($normal, $active, $selector: '&') {
-  $normal-color: darken($normal, 50%);
-  $normal-shadow: lighten($normal, 20%);
-  a.btn {
-    #{$selector} {
-      white-space: nowrap;
-      margin: 0;
-      color: $normal-color;
-      @include button-normal-state($normal);
-      @include inline-block;
-      vertical-align: middle;
-      span {
-        margin: 0 2px;
-        html[dir="ltr"] &:first-child, html[dir="rtl"] &:last-child { margin-left: 0; }
-        html[dir="rtl"] &:first-child, html[dir="ltr"] &:last-child { margin-right: 0; }
-      }
-      &, .text, .icon {
-        line-height: 1em;
-        color: $normal-color;
-        @include text-shadow($menu-border-width $menu-border-width 0 white);
-      }
-      &:focus {
-        border: $menu-border-width solid $active;
-      }
-      &:hover {
-        @include background-image(linear-gradient(lighten($active, 8%), $active));
-        position: relative;
-        z-index: 2;
-        &, .text, .icon {
-          color: #FFF;
-          @include text-shadow(0 0 1px $normal-color);
-          text-decoration: none;
-        }
-        border-width: $menu-border-width;
-      }
-      &:active {
-        @include background-image(linear-gradient($active, darken($active, 8%)));
-        border-color: rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1);
-        @include box-shadow(0 2px 2px rgba(0, 0, 0, 0.3) inset, 0 -2px 2px rgba(0, 0, 0, 0.05));
-        &, .text, .icon {
-          color: #FFF;
-          @include text-shadow(-1px -1px 1px $normal-color);
-          text-decoration: none;
-        }
-      }
-      &[disabled] {
-        background: #CCC;
-        cursor: default;
-        pointer-events: none;
-        .text, .icon {
-          @include text-shadow(none);
-        }
-        &:hover {
-          .text, .icon { color: #666; }
-        }
-      }
-    }
-  }
-  input[type="submit"] {
-    #{$selector} {
-      padding: 3px 6px 4px;
-      color: $normal-color;
-      line-height: 1em;
-      @include button-normal-state($normal);
-      @include inline-block;
-      @include text-shadow(1px 1px 1px $normal-shadow);
-      &:focus {
-        border: $menu-border-width solid $active;
-      }
-      &:hover {
-        @include text-shadow(0 0 1px $normal-color);
-        @include background-image(linear-gradient(lighten($active, 8%), $active));
-        color: #FFF;
-        text-decoration: none;
-        padding: 3px 6px 4px;
-        border-width: $menu-border-width;
-      }
-      &:active {
-        padding: 4px 6px 3px 6px;
-        color: #FFF;
-        border-color: rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1);
-        @include background-image(linear-gradient($active, darken($active, 8%)));
-        @include box-shadow(0 2px 2px rgba(0, 0, 0, 0.3) inset, 0 -2px 2px rgba(0, 0, 0, 0.05));
-        @include text-shadow(-1px -1px 1px $normal-color);
-        text-decoration: none;
-      }
-      &[disabled] {
-        background: #CCC;
-        cursor: default;
-        pointer-events: none;
-        @include text-shadow(none);
-        color: #666;
-      }
-    }
-  }
-}
 
 
 /*@mixin button-group { */
@@ -499,43 +431,32 @@ $active-bg: $base-color;
   }
 }
 
-
-
-@mixin outerRow() {
+// Permits to define properly media queries
+@mixin respond-to($screen-sizes...) {
+  @each $screen-size in $screen-sizes {
+    @if $screen-size == small {
+      @media #{$small} { @content; }
+    }
+    @else if $screen-size == medium {
+      @media #{$medium} { @content; }
+    }
+    @else if $screen-size == large {
+      @media #{$large} { @content; }
+    }
+    @else {
+      @warn "Assuming no @media queries for unknown screen size: #{$screen-size}";
+      @content;
+    }
+  }
 }
-@mixin column($count) {
-}
-@mixin respondTo($screen) {
-  @content
-}
 
 
-/*
-$common-layout: smart;
-@import "themes/tekyla/common/*.png";
-@include all-common-sprites;
 
-$icons-layout: smart;
-@import "themes/tekyla/icons/*.png";
-@include all-icons-sprites;
-*/
+@import "foundation/foundation-global";
+@import "foundation/components/grid";
+@import "foundation/components/top-bar";
+// @import "foundation/components/buttons";
 
-/*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic);*/
-$sans-font-family: 'Open Sans', Helvetica, 'Liberation Sans', sans-serif;
-$base-font-family: $sans-font-family;
-
-$headerFontFamily: $base-font-family;
-$bodyFontFamily: $base-font-family;
-$baseFontSize: $fs-normal;
-$mainColor: $base-color;
-
-$topBarHeight: 32px;
-$topBarBgColor: $active-color;
-$topBarDropBgColor: $topBarBgColor;
-// $topBarBgColor: #000000;//default $active-color //#000000 (ZURB)
-// $topBarDropBgColor: darken($topBarBgColor, 1%);
-
-@import "foundation";
 @import "active-list/minimal";
 @import "beehive.css.scss";
 @import "tables.css.scss";
