Chnages title weight and #journals style

--- a/app/themes/tekyla/stylesheets/main.css.scss
+++ b/app/themes/tekyla/stylesheets/main.css.scss
@@ -58,6 +58,7 @@ html.backend {
           margin-bottom: $default-gap;
           h1 {
             &, & * {
+              font-weight: bold;
               font-size: $fs-huge;
               line-height: round(1.4 * $fs-huge);
 	      vertical-align: middle;
@@ -155,9 +156,16 @@ html.authentication {
 
 #journals {
   @include tab-pills;
-  dd i {
-    @include is-icon;
-    @include use-icon(book);
+  dd {
+    a { 
+      &.special i {
+        color: $important-color;
+      }
+      i {
+        @include is-icon;
+        @include use-icon(book);
+      }
+    }
   }
 }
 
