--- a/app/views/backend/equipments/new.html.haml
+++ b/app/views/backend/equipments/new.html.haml
@@ -1,8 +1,8 @@
 -# Generated automatically. Remove this line to keep your changes.
-=simple_form_for([:backend, @tool], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
+=simple_form_for([:backend, @equipment], (params[:dialog] ? {'data-dialog' => params[:dialog]} : {})) do |f|
   -if params[:redirect]
     =hidden_field_tag(:redirect, params[:redirect])
   .form-fields>=render(:partial => 'form', :locals => {:f => f})
   =form_actions do
     =submit_tag(tl(:create), 'data-disable-with' => tl(:please_wait))
-    =link_to(tl(:cancel), backend_tools_url, (params[:dialog] ? {'data-close-dialog' => params[:dialog]} : {}))
+    =link_to(tl(:cancel), backend_equipments_url, (params[:dialog] ? {'data-close-dialog' => params[:dialog]} : {}))
